Project rename, loads of improvements

--- a/Principia/TODO
+++ b/Principia/TODO
@@ -1,18 +1,34 @@
-Ideas:
+Todo:
+Fix bisect line tool to provide perpendicular lines as well
+Fix Challenge 8 so that line can not be translated due to being on the same line
+Add target number of moves per level and change icon to star/medal
+Create app icon
+Create launch screens
+Add all completion messages (new tools etc.)
+Show special completion message for final level
+Show total number of moves vs. target on solution screen
+Implement pan/zoom (two finges?)
+
+Build tutorial
+Build level 15
+Build level 16
+Build level 17
+Build level 18
+Build level 19
+Build level 20
+Build level 21
+Build level 22
+Build level 23
+Build level 24
+Build level 25
+
+Make point tool points snap to objects if close enough
+Differentiate between movable and other points when drawing them
 Add ability to draw line from anywhere, create point of not found near taps
 Add ability to draw line with one swipe, create/connect to point on touch start and end
-Add ability to draw circle by marking radius first and then select where to center it
 Add highlight functionality to lines
-Only show tools for each level that are unlocked
-Lock levels until previous has been beaten?
+Lock levels until previous has been beaten
 Add playground mode with all tools unlocked
-Add bisect tool
-Expand on tutorial-level: Explain interface, Points, line, circle, ray, intersect
-Implement check for level solutions even after perturbation to points
 
-Level ideas:
-Make square
-Make midpoint (bisect line segment)
-Bisect angle
-Make perpendicular line
-Make perpendicular line to line segment starting from specified fixed point
+Implement Game Center-functionality with achievement for all levels and all levels with stars/gold medals
+Add non-retina versions of tool icons
