--- a/Principia/TODO
+++ b/Principia/TODO
@@ -8,10 +8,9 @@ Add non-retina versions of tool icons
 Test iPhone interface
 
 - Tool handling
-Fix bisect line tool to provide right angle and provide perpendicular lines as well if lines intersect
 Make point tool points snap to objects if close enough?
 Add ability to draw line with one swipe, create/connect to point on touch start and end
-Make bisect tool allow tapping three points as well
+Make bisector tool go with closest object rather than prefer lines over points 
 
 - Other
 Lock levels until previous has been beaten
